Split image loading functions into separate file

--- a/AR_Simple/AR_Simple.vcxproj.filters
+++ b/AR_Simple/AR_Simple.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="FileWriter.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageLoader.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageLoader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
