--- a/AR_Simple/AR_Simple.vcxproj
+++ b/AR_Simple/AR_Simple.vcxproj
@@ -86,10 +86,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FileWriter.c" />
+    <ClCompile Include="ImageLoader.c" />
     <ClCompile Include="Main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileWriter.h" />
+    <ClInclude Include="ImageLoader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
