--- a/AR_Simple/AR_Simple.vcxproj.filters
+++ b/AR_Simple/AR_Simple.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="ImageLoader.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="object.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FileWriter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ImageLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
